--- a/assets/index.html
+++ b/assets/index.html
@@ -38,20 +38,13 @@
 	<div class="hidden"></div>
 
 	<!-- Load CSS -->
-	<script>
-		function loadCSS(hf) {
-			var ms=document.createElement("link");ms.rel="stylesheet";
-			ms.href=hf;document.getElementsByTagName("head")[0].appendChild(ms);
-		}
-                loadCSS("css/normalize.css");
-                loadCSS("css/fonts.css");
-                loadCSS("css/header.css");
-                loadCSS("css/main.css");
-                loadCSS("css/footer.css");               
-	</script>
-
+        <link rel="stylesheet"  href="css/normalize.css" />
+	<link rel="stylesheet"  href="css/fonts.css" />
+	<link rel="stylesheet"  href="css/header.css" />
+	<link rel="stylesheet"  href="css/main.css" />
+	<link rel="stylesheet"  href="css/footer.css" />
 	<!-- Load Scripts -->
 	<script src="js/main.js"></script>
-  <script src="js/plugins.js"></script>
+        <script src="js/plugins.js"></script>
 </body>
 </html>
