--- a/assets/index.html
+++ b/assets/index.html
@@ -32,19 +32,30 @@
 
   </header>
   <section>
-    
+
   </section>
+  <section class="main">
+      <div class="trigger"></div>
+    <div class="element"></div>
+  </section>
+
+
+
 	<!-- This write code -->
 	<div class="hidden"></div>
 
 	<!-- Load CSS -->
-        <link rel="stylesheet"  href="css/normalize.css" />
+    <link rel="stylesheet"  href="css/normalize.css" />
 	<link rel="stylesheet"  href="css/fonts.css" />
 	<link rel="stylesheet"  href="css/header.css" />
 	<link rel="stylesheet"  href="css/main.css" />
 	<link rel="stylesheet"  href="css/footer.css" />
 	<!-- Load Scripts -->
-	<script src="js/main.js"></script>
-        <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+    <script src="libs/ScrollMagic.min.js"></script>
+    <script src="libs/debug.addIndicators.min.js"></script>
+    <script src="libs/anime.min.js"></script>
+    <script src="js/animation.anime.min.js"></script>
+    <script src="js/plugins.js"></script>
 </body>
 </html>
