--- a/assets/index.html
+++ b/assets/index.html
@@ -30,24 +30,8 @@
 <body>
 	
   <section class="main">
-      <div class="TERADEK_LOWER_THIRD_ANIMATION_10">
-          <div class="scene-1">
-              <div class="scene-1__content">
-                  <div class="content__group-1">
-                      <div class="group__background"></div>
-                      <div class="content__top">
-                          <div class="content__top-inner">
-                              <div class="content__image"><img src="img/crutch-10-img.png" alt=""></div>
-                              <div class="content__group-inner">
-                                  <div class="content__title"><span class="real-text">Serhii  Polyvanyi111111111111111</span></div>
-                                  <div class="content__description"><span class="real-text">Founder at Blacklead Studio</span></div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
+      <div class="trigger"></div>
+    <div class="element"></div>
   </section>
 
 	<!-- Load CSS -->
@@ -55,8 +39,10 @@
     <link rel="stylesheet"  href="css/fonts.css" />
     <link rel="stylesheet"  href="css/main.css" />
 	<!-- Load Scripts -->
-
+    <script src="libs/ScrollMagic.min.js"></script>
+    <script src="libs/debug.addIndicators.min.js"></script>
     <script src="libs/anime.min.js"></script>
+    <script src="js/animation.anime.min.js"></script>
     <script src="js/plugins.js"></script>
 </body>
 </html>
