--- a/assets/index.html
+++ b/assets/index.html
@@ -30,29 +30,8 @@
 <body>
 	
   <section class="main">
-      <div class="TERADEK_LOWER_THIRD_ANIMATION_14">
-          <div class="scene-1">
-              <div class="scene-1__content">
-                  <div class="content__group-1">
-                      <div class="content__group-layer-1">
-                          <div class="content__title"><span class="real-text">Motion  Designer</span></div>
-                      </div>
-                      <div class="content__group-layer-2">
-                          <div class="layer-inner">
-                              <div class="content__image">
-                                  <img src="img/decor-circle.svg" alt="">
-                                  <div class="image-separator"></div>
-                              </div>
-                              <div class="content__inner">
-                                  <div class="content__title"><span class="real-text">Motion  Designer</span></div>
-                                  <div class="content__description"><span class="real-text">Motion Graphics </span></div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
+      <div class="trigger"></div>
+    <div class="element"></div>
   </section>
 
 	<!-- Load CSS -->
