--- a/assets/index.html
+++ b/assets/index.html
@@ -30,8 +30,25 @@
 <body>
 	
   <section class="main">
-      <div class="trigger"></div>
-    <div class="element"></div>
+      <div class="TERADEK_LOWER_THIRD_ANIMATION_17">
+          <div class="scene-1">
+              <div class="scene-1__content">
+                  <div class="content__group-1">
+                      <div class="layer-group-1">
+                          <div class="content__image">
+                              <img src="img/17-left-decoration.svg" alt="">
+                          </div>
+                          <div class="content__group-inner">
+                              <div class="content__top-separator"></div>
+                              <div class="content__title"><span class="real-text">Motion  Designer</span></div>
+                              <div class="content__description"><span class="real-text">Motion Graphics </span></div>
+                              <div class="content__bottom-separator"></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </section>
 
 	<!-- Load CSS -->
@@ -39,10 +56,7 @@
     <link rel="stylesheet"  href="css/fonts.css" />
     <link rel="stylesheet"  href="css/main.css" />
 	<!-- Load Scripts -->
-    <script src="libs/ScrollMagic.min.js"></script>
-    <script src="libs/debug.addIndicators.min.js"></script>
     <script src="libs/anime.min.js"></script>
-    <script src="js/animation.anime.min.js"></script>
     <script src="js/plugins.js"></script>
 </body>
 </html>
