--- a/assets/index.html
+++ b/assets/index.html
@@ -30,33 +30,19 @@
 <body>
 	
   <section class="main">
-      <div class="TERADEK_LOWER_THIRD_ANIMATION_17">
-          <div class="scene-1">
-              <div class="scene-1__content">
-                  <div class="content__group-1">
-                      <div class="layer-group-1">
-                          <div class="content__image">
-                              <img src="img/17-left-decoration.svg" alt="">
-                          </div>
-                          <div class="content__group-inner">
-                              <div class="content__top-separator"></div>
-                              <div class="content__title"><span class="real-text">Motion  Designer</span></div>
-                              <div class="content__description"><span class="real-text">Motion Graphics </span></div>
-                              <div class="content__bottom-separator"></div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
+       <div class="trigger"></div>
+    <div class="element"></div>
   </section>
 
 	<!-- Load CSS -->
-    <link rel="stylesheet"  href="css/normalize.css" />
+     <link rel="stylesheet"  href="css/normalize.css" />
     <link rel="stylesheet"  href="css/fonts.css" />
     <link rel="stylesheet"  href="css/main.css" />
 	<!-- Load Scripts -->
+    <script src="libs/ScrollMagic.min.js"></script>
+    <script src="libs/debug.addIndicators.min.js"></script>
     <script src="libs/anime.min.js"></script>
+    <script src="js/animation.anime.min.js"></script>
     <script src="js/plugins.js"></script>
 </body>
 </html>
