--- a/assets/index.html
+++ b/assets/index.html
@@ -30,8 +30,29 @@
 <body>
 	
   <section class="main">
-       <div class="trigger"></div>
-    <div class="element"></div>
+      <div class="TERADEK_LOWER_THIRD_ANIMATION_32">
+          <div class="scene-1">
+              <div class="scene-1__content">
+                  <div class="content__group-1">
+                           <div class="content__left--decoration">
+                               <img class="decor-1" src="img/shape-left.png" alt="">
+                               <img class="decor-2" src="img/shape-left.png" alt="">
+                           </div>
+                          <div class="content__layer--bottom"></div>
+                          <div class="content__layer--left"></div>
+                          <div class="content__group-inner">
+                              <div class="content__description"><div class="real-text">Founder at Blacklead Studio</div></div>
+                              <div class="content__title"><div class="real-text">Serhii Polyvanyi</div></div>
+                          </div>
+                          <div class="content__layer--right">
+                              <img class="circle-decor" src="img/decor-circle.svg" alt="">
+                              <img class="bg-decor" src="img/shape.png" alt="">
+                          </div>
+
+                  </div>
+              </div>
+          </div>
+      </div>
   </section>
 
 	<!-- Load CSS -->
@@ -39,10 +60,7 @@
     <link rel="stylesheet"  href="css/fonts.css" />
     <link rel="stylesheet"  href="css/main.css" />
 	<!-- Load Scripts -->
-    <script src="libs/ScrollMagic.min.js"></script>
-    <script src="libs/debug.addIndicators.min.js"></script>
     <script src="libs/anime.min.js"></script>
-    <script src="js/animation.anime.min.js"></script>
     <script src="js/plugins.js"></script>
 </body>
 </html>
