--- a/assets/index.html
+++ b/assets/index.html
@@ -30,29 +30,8 @@
 <body>
 	
   <section class="main">
-      <div class="TERADEK_LOWER_THIRD_ANIMATION_32">
-          <div class="scene-1">
-              <div class="scene-1__content">
-                  <div class="content__group-1">
-                           <div class="content__left--decoration">
-                               <img class="decor-1" src="img/shape-left.png" alt="">
-                               <img class="decor-2" src="img/shape-left.png" alt="">
-                           </div>
-                          <div class="content__layer--bottom"></div>
-                          <div class="content__layer--left"></div>
-                          <div class="content__group-inner">
-                              <div class="content__description"><div class="real-text">Founder at Blacklead Studio</div></div>
-                              <div class="content__title"><div class="real-text">Serhii Polyvanyi</div></div>
-                          </div>
-                          <div class="content__layer--right">
-                              <img class="circle-decor" src="img/decor-circle.svg" alt="">
-                              <img class="bg-decor" src="img/shape.png" alt="">
-                          </div>
-
-                  </div>
-              </div>
-          </div>
-      </div>
+        <div class="trigger"></div>
+    <div class="element"></div>
   </section>
 
 	<!-- Load CSS -->
